--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/bulma": "^1.3.0",
+    "firebase": "^7.24.0",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {}
