--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@nuxtjs/bulma": "^1.3.0",
     "firebase": "^7.24.0",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "vee-validate": "^2.2.15"
   },
   "devDependencies": {}
 }
