--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/bulma": "^1.3.0",
     "firebase": "^7.24.0",
+    "moment": "^2.29.1",
     "nuxt": "^2.14.0",
     "vee-validate": "^2.2.15"
   },
